TODO LIST (Moved again to the file TODO)


KPilot Developer's notes for May 15th, 2003
===========================================

2003-5-9  Adriaan de Groot
* Fixed up some config issues in the NULL conduit.

2003-5-5  Adriaan de Groot
* plugin.{h,cc} Added a maybeSave() function for the new conduit config
  style. Removed some unused variables.
* conduitConfigDialog.{h,cc} Using maybeSave() to save or cancel selection
  changes.

2003-5-3  Adriaan de Groot
* Spent lots of time panicing my system and causing fatal exceptions
  on my Pilot by playing with pilot-link 0.11.7 and FreeBSD's USB
  stack.
* kpilotlink.cc Suppress printing the "accidentally in acceptDevice" 
  more than once. Try to escape from the infinite socketnotifier loop.


2003-5-2  Adriaan de Groot
* Aiming for bi-weekly notes this month again.
* Looks like I reverted the PRETTY_FUNCTION printing.
* I'm working from an everything-HEAD-except vcal and abbrowser
  checkout, because the new resources framework breaks everything.
* Next KPilot tarballs will be 4.4.0 (HEAD) release.

KPilot Developer's notes for April 30th, 2003
=============================================

2003-4-25  Adriaan de Groot
* Updated resizing action in the conduit config dialog.
* Added a ConduitConfigBase to the knotes conduit.
* Changed a bunch of Name[] entries for the time conduit. We
  need shorter names; most of them are horribly redundant.
* Noticed that the conduit checklist items don't always get
  painted right. Added a workaround.

2003-4-24  Adriaan de Groot
* More work on the conduit configuration stuff.
* Make FUNCTIONSETUP print PRETTY_FUNCTION instead of just FUNCTION.
* Added a ConduitConfigBase object to the time conduit.

2003-4-22  Reinhold Kainhofer
* Cleanup of several cout and other debug messages
* In the addressbook and todo conduits, after the sync the AppInfoBlock
  is written back to the databases so that adding categories to the 
  database finally works.

2003-4-21  Adriaan de Groot